--- a/pom.xml
+++ b/pom.xml
@@ -35,12 +35,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-			<version>3.2.4</version>
+<!--			<version>3.2.4</version>-->
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-			<version>2.0.13</version>
+<!--			<version>2.0.13</version>-->
 		</dependency>
 	</dependencies>
 
@@ -53,7 +53,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-				<version>3.3.1</version>
+<!--				<version>3.3.1</version>-->
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<failOnViolation>true</failOnViolation>
