--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
 	<description>filmorate</description>
 	<properties>
 		<java.version>21</java.version>
+		<starter-validation-version>3.2.4</starter-validation-version>
+		<slf4j-api-version>2.0.13</slf4j-api-version>
+		<maven-checkstyle-plugin-version>3.3.1</maven-checkstyle-plugin-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -35,12 +38,12 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
-<!--			<version>3.2.4</version>-->
+			<version>${starter-validation-version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
-<!--			<version>2.0.13</version>-->
+			<version>${slf4j-api-version}</version>
 		</dependency>
 	</dependencies>
 
@@ -53,7 +56,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-checkstyle-plugin</artifactId>
-<!--				<version>3.3.1</version>-->
+				<version>${maven-checkstyle-plugin-version}</version>
 				<configuration>
 					<configLocation>checkstyle.xml</configLocation>
 					<failOnViolation>true</failOnViolation>
