--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<starter-validation-version>3.2.4</starter-validation-version>
 		<slf4j-api-version>2.0.13</slf4j-api-version>
 		<maven-checkstyle-plugin-version>3.3.1</maven-checkstyle-plugin-version>
+		<logbook-spring-boot-starter-version>3.7.2</logbook-spring-boot-starter-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -48,7 +49,7 @@
 		<dependency>
 			<groupId>org.zalando</groupId>
 			<artifactId>logbook-spring-boot-starter</artifactId>
-			<version>3.7.2</version>
+			<version>${logbook-spring-boot-starter-version}</version>
 		</dependency>
 	</dependencies>
 
